Increased z-index of evolution display (iOS issue).

--- a/style.css
+++ b/style.css
@@ -462,7 +462,7 @@ main {
    ======================================= */
 .evolution-display {
     position: absolute;
-    z-index: 1;
+    z-index: 5;
     top: -0.9em;
     left: -0.8em;
 
